--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 ###< lexik/jwt-authentication-bundle ###
 
 node_modules/
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
